...
            app:counterMaxLength="20"
            app:errorEnabled="true"
            app:helperText="Enter a place"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_place_text_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorDarkBlue"
                android:textColorHighlight="@color/colorDarkBlue"
                android:textColorHint="@color/colorDarkBlue"
                android:textColorLink="@color/colorDarkBlue"
                android:visibility="visible"
                tools:text="@string/hello_blank_fragment" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/img_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:apiStatus="@{viewModel.status}" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_result_recyclerview"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
